<resources>
    <string name="app_name">All Eyes</string>
    <string name="undo">UNDO</string>

    <string name="greeting_most_searched">My most searched contacts</string>
    <string name="greeting_favs">My favorite contacts</string>
    <string name="greeting_all">All contacts</string>
    <string name="most_searched_tab">Most searched</string>
    <string name="fav_tab">Favorites</string>
    <string name="all_contacts_tab">All contacts</string>

    <!-- main_toolbar -->
    <string name="my_profile_action">My profile</string>
    <string name="show_only_active">Show only active contacts</string>
    <string name="surprise_me">Surprise me!</string>

    <!-- UnblockActivity -->
    <string name="unblock">Unblock Users</string>
    <string name="unblock_me">Unblock me</string>

    <!-- myProfile -->
    <string name="my_profile_title">My Profile</string>
    <string name="my_profile">My profile</string>
    <string name="set_my_status">Set my status:</string>
    <string name="save_all_changes">Save all changes</string>
    <string name="go_to_unblocked_activity">Go to blocked users</string>
    <string name="profile_saved">Profile saved</string>

    <string name="sun_is_blocked">Reveal myself on <b>Sunday</b></string>
    <string name="sun_is_not_blocked">Hide myself on <b>Sunday</b></string>

    <string name="mon_is_blocked">Reveal myself on <b>Monday</b></string>
    <string name="mon_is_not_blocked">Hide myself on <b>Monday</b></string>

    <string name="tue_is_blocked">Reveal myself on <b>Tuesday</b></string>
    <string name="tue_is_not_blocked">Hide myself on <b>Tuesday</b></string>

    <string name="wed_is_blocked">Reveal myself on <b>Wednesday</b></string>
    <string name="wed_is_not_blocked">Hide myself on <b>Wednesday</b></string>

    <string name="thu_is_blocked">Reveal myself on <b>Thursday</b></string>
    <string name="thu_is_not_blocked">Hide myself on <b>Thursday</b></string>

    <string name="fri_is_blocked">Reveal myself on <b>Friday</b></string>
    <string name="fri_is_not_blocked">Hide myself on <b>Friday</b></string>

    <string name="sat_is_blocked">Reveal myself on <b>Saturday</b></string>
    <string name="sat_is_not_blocked">Hide myself on <b>Saturday</b></string>

    <!-- contact toolbar -->
    <string name="action_favorite">Favorite</string>

    <!-- search toolbar -->
    <string name="search_title">Search contacts</string>

    <!-- sorting and filtering options -->
    <string name="abc">Alphabetically</string>
    <string name="availability">Status</string>
    <string name="favorites">My favorites</string>
    <string name="searchesCounter">Top searched</string>

    <!-- fav button -->
    <string name="fav_tag">fav</string>

    <!--block button -->
    <string name="block_tag">block</string>

    <!-- track button -->
    <string name="track">track</string>
    <string name="contact_is_tracked"> is now tracked</string>
    <string name="contact_is_untracked"> is not tracked anymore</string>

    <!--settings -->
    <string name="hebrew">Hebrew</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <string name="privacy">Privacy</string>
    <string name="all">Everyone</string>
    <string name="only_contacts">Only my contacts</string>
    <string name="only_favs">Only my favorites</string>
    <string name="none">No one</string>

    <!-- init -->
    <string name="phone_number_button">Start with my phone number</string>

    <!-- track service -->
    <string name="track_service_title">All Eyes Tracker</string>
    <string name="one_user_track">1 contact is being tracked</string>
    <string name="multiple_users_track">contacts are being tracked</string>

</resources>
