<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:title="@string/language"
        android:key="language">

        <RadioButton
            android:id="@+id/hebrew_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hebrew"
            android:textAppearance="?android:textAppearanceMedium" />
        <RadioButton
            android:id="@+id/english_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textAppearance="?android:textAppearanceMedium" />
    </RadioGroup>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:title="@string/privacy"
        android:key="privacy">

        <RadioButton
            android:id="@+id/all_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:textAppearance="?android:textAppearanceMedium" />
        <RadioButton
            android:id="@+id/only_contacts_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/only_contacts"
            android:textAppearance="?android:textAppearanceMedium" />
        <RadioButton
        android:id="@+id/only_favs_radio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/only_favs"
        android:textAppearance="?android:textAppearanceMedium" />
        <RadioButton
        android:id="@+id/none_radio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/none"
        android:textAppearance="?android:textAppearanceMedium" />
    </RadioGroup>


</PreferenceScreen>